fix align verse top

--- a/AndBible/assets/style.css
+++ b/AndBible/assets/style.css
@@ -2,7 +2,7 @@
 */
 
 body {
-	line-height: 1.6em;
+	line-height: 1.6em; /* repeat this in .verse */
 	font-size: 1.1em;
 }
 
@@ -18,6 +18,7 @@ h1 {
 	color: Gray;
 	vertical-align: top;
 	font-size: 0.7em;
+	line-height: 1.6em; /* need line-height repeated here because otherwise the verse no drops to the bottom */
 }
 .noteRef {
 	color: Green;
